2021-05-10  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.c (pk_compiler_new_with_flags): Rename from
	pk_compiler_new.
	(pk_compiler_new): Define.
	* libpoke/libpoke.h: Prototype for pk_compiler_new_with_flags.
	(PK_F_NOSTDTYPES): Define.
	* libpoke/pkl.h: Add `flags' argument to pkl_new.
	(PKL_F_NOSTDTYPES): Define.
	* libpoke/std-types.pk: New file.
	* libpoke/Makefile.am (dist_pkgdata_DATA): Add std-types.pk.
	* libpoke/std.pk: Do not use standard types.
	* libpoke/pkl.c (pkl_new): Load std-types.pk
	(pkl_new): Get a `flags' argument and do not define standard types
	if PKL_F_NOSTDTYPES is specified.


2021-05-09  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y: New token OFFSET.
	(primary): OFFSET is a primary.
	* libpoke/pkl-lex.l: Handle offsets in alien tokens.
	* libpoke/libpoke.h (struct pk_alien_token): Add support for
	offset tokens and string tokens.
	(PK_ALIEN_TOKEN_OFFSET): Define.
	(PK_ALIEN_TOKEN_STRING): Likewise.
	* libpoke/pkl.h (struct pkl_alien_token): Add support for offset
	tokens and string tokens.
	(PKL_ALIEN_TOKEN_OFFSET): Define.
	(PKL_ALIEN_TOKEN_STRING): Likewise.

2021-05-08  Jose E. Marchesi  <jemarch@gnu.org>,

	* libpoke/libpoke.c (pk_register_iod): Allow replacing the foreign
	IO device.

2021-05-08  Jose E. Marchesi  <jemarch@gnu.org>,

	* poke/pk-map.c: New variable alien_token.
	(pk_map_alien_token_handler): Adapt to new interface.

	* libpoke/libpoke.h (struct pk_alien_token): Define.
	(PK_ALIEN_TOKEN_NOTOKEN): Likewise.
	(PK_ALIEN_TOKEN_IDENTIFIER): Likewise.
	(PK_ALIEN_TOKEN_INTEGER): Likewise.
	(pk_alien_token_handler_fn): Return an alien token struct.
	* libpoke/pkl.h (struct pkl_alien_token): Likewise.
	(PKL_ALIEN_TOKEN_NOTOKEN): Likewise.
	(PKL_ALIEN_TOKEN_IDENTIFIER): Likewise.
	(PKL_ALIEN_TOKEN_INTEGER): Likewise.
	* libpoke/pkl-lex.l: Handle better alien tokens.

2021-05-08  Jose E. Marchesi  <jemarch@gnu.org>,

	* libpoke/ios-dev.h (struct ios_dev_if): Make the get_if_name hook